--- a/ITTasks/Views/Reports/Reporting.cshtml
+++ b/ITTasks/Views/Reports/Reporting.cshtml
@@ -3,6 +3,7 @@
 @using System.Data;
 @using ChartDirector;
 @using ITTasks.Statics;
+@using ITTasks.Statics.Entities.Roles;
 
 @{
 	int xxx = 0;
@@ -138,7 +139,17 @@
 		margin: auto;
 	}
 </style>
-
+@if (User.IsInRole(RoleTypes.Admin))
+{
+	@section Admn{
+	<li class="nav-item">
+		<a class="nav-link text-dark" title="گزارش گیری" asp-area="" asp-controller="Reports" asp-action="Reporting">گزارش گیری</a>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link text-dark" title="پنل ادمین" asp-area="" asp-controller="Admin" asp-action="Panel">پنل ادمین</a>
+	</li>
+}
+}
 
 <!--Main Navigation-->
 <header>
