--- a/ITTasks/Views/Tasks/AllTask.cshtml
+++ b/ITTasks/Views/Tasks/AllTask.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ITTasks.Infrastructure.Helper;
 @using ITTasks.Models.DTOS.Tasks;
 @using ITTasks.Statics;
+@using ITTasks.Statics.Entities.Roles;
 @model List<ITTaskDto>
 
 
@@ -70,6 +71,19 @@
 		text-align: left;
 	}
 </style>
+
+@if (User.IsInRole(RoleTypes.Admin))
+{
+	@section Admn{
+	<li class="nav-item">
+		<a class="nav-link text-dark" title="گزارش گیری" asp-area="" asp-controller="Reports" asp-action="Reporting">گزارش گیری</a>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link text-dark" title="پنل ادمین" asp-area="" asp-controller="Admin" asp-action="Panel">پنل ادمین</a>
+	</li>
+}
+}
+
 
 <div id="modal" class="modal">
 	<div class="modal-content-custom">
