--- a/ITTasks/Views/User/GetAllUsers.cshtml
+++ b/ITTasks/Views/User/GetAllUsers.cshtml
@@ -1,7 +1,19 @@
 ﻿@using ITTasks.Models.DTOS.Users;
+@using ITTasks.Statics.Entities.Roles;
 @model List<UserDto>
 
+@{
+	Layout = "_Layout";
+}
 
+	@section Styles{
+	<link href="~/lib/pwt.datepicker/dist/css/persian-datepicker.min.css" rel="stylesheet" />
+	<link href="~/lib/pwt.datepicker/dist/css/persian-datepicker.css" rel="stylesheet" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="~/lib/datatables/datatables.min.css" />
+
+	<link href="~/lib/sweetalert2/sweetalert.min.css" rel="stylesheet" />
+}
 	<style>
 		.form-check .form-check-input {
     float: right;
@@ -10,8 +22,20 @@
 	</style>
 
 
+	@if (User.IsInRole(RoleTypes.Admin))
+{
+	@section Admn{
+	<li class="nav-item">
+		<a class="nav-link text-dark" title="گزارش گیری" asp-area="" asp-controller="Reports" asp-action="Reporting">گزارش گیری</a>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link text-dark" title="پنل ادمین" asp-area="" asp-controller="Admin" asp-action="Panel">پنل ادمین</a>
+	</li>
+}
+}
+
 <div class="container mt-3">
-	<table class="table table-striped">
+	<table class="table data-table table-hover text-nowrap display col-12">
 		<thead>
 			<tr>
 				<th>نام کاربر </th>
@@ -50,6 +74,7 @@
 			@{
 				await Html.RenderPartialAsync("_ValidationScriptsPartial");
 			}
+
 
 			<script type="text/javascript">
 				
